2011-04-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Update to account for movement of .cfg files.

2011-03-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog, Makefile, nbench/Makefile, nbench/README, nbench/main.c,
	nbench/nbench-byte-2.2.3/COM.DAT, nbench/nbench-byte-2.2.3/Changes,
	nbench/nbench-byte-2.2.3/Makefile, nbench/nbench-byte-2.2.3/NNET.DAT,
	nbench/nbench-byte-2.2.3/README,
	nbench/nbench-byte-2.2.3/README.motorola,
	nbench/nbench-byte-2.2.3/README.nonlinux,
	nbench/nbench-byte-2.2.3/README.submit,
	nbench/nbench-byte-2.2.3/RESULTS, nbench/nbench-byte-2.2.3/bdoc.txt,
	nbench/nbench-byte-2.2.3/debugbit.good.gz,
	nbench/nbench-byte-2.2.3/emfloat.c,
	nbench/nbench-byte-2.2.3/emfloat.h,
	nbench/nbench-byte-2.2.3/hardware.c,
	nbench/nbench-byte-2.2.3/hardware.h,
	nbench/nbench-byte-2.2.3/hello.c, nbench/nbench-byte-2.2.3/misc.c,
	nbench/nbench-byte-2.2.3/misc.h, nbench/nbench-byte-2.2.3/nbench0.c,
	nbench/nbench-byte-2.2.3/nbench0.h,
	nbench/nbench-byte-2.2.3/nbench1.c,
	nbench/nbench-byte-2.2.3/nbench1.h,
	nbench/nbench-byte-2.2.3/nmglobal.h,
	nbench/nbench-byte-2.2.3/pointer.c,
	nbench/nbench-byte-2.2.3/pointer.h,
	nbench/nbench-byte-2.2.3/sysinfo.c,
	nbench/nbench-byte-2.2.3/sysinfo.c.example,
	nbench/nbench-byte-2.2.3/sysinfo.c.template,
	nbench/nbench-byte-2.2.3/sysinfo.sh,
	nbench/nbench-byte-2.2.3/sysinfoc.c,
	nbench/nbench-byte-2.2.3/sysinfoc.c.example,
	nbench/nbench-byte-2.2.3/sysinfoc.c.template,
	nbench/nbench-byte-2.2.3/sysspec.c,
	nbench/nbench-byte-2.2.3/sysspec.h,
	nbench/nbench-byte-2.2.3/wordcat.h: New files.
	Add first benchmark -- Byte nbench.